kubernetes/minikube-A0-namespace.yaml
######################
# MAIN CONFIGURATION
######################
#KUBERNETES NAMESPACE
apiVersion: v1
kind: Namespace
metadata:
  name: devel
