kubernetes/minikube-C0-ingress.yaml
#KUBERNETES INGRESS
# To enable nginx ingress load balancer under minikube use: minikube addons enable ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: churiservices-ingress
  namespace: devel
#  annotations:
#    nginx.ingress.kubernetes.io/use-regex: "true"
#    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: churiservices.example
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: keycloak-service
                port:
                  number: 8080
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: grafana-service
                port:
                  number: 3000
          - path: /rabbitmq
            pathType: Prefix
            backend:
              service:
                name: rabbitmq-service
                port:
                  number: 8080
